# 202510291241-safo_svelte3_tailwind4_routify2_node20_template_v1_2

./: .gitignore  BOTTOM_PANEL_ADJUSTMENT.md  index.css  index.html  jsconfig.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.mjs
server _2/: Cargo.toml  target
server _2/src/: cors.rs  main.rs  vendor_bootstrap.rs
server _2/static/: index.html
src/: App.svelte  main.css  main.js  navigator.routify.patch.js  patch-svelte-compiler.js
src/components/: AIProvider.svelte  CommaondPalette.svelte  FileTabs.svelte  Hello.svelte  Main.svelte  Notification.svelte  SideBar.svelte  Sidebar.svelte  Tabs.svelte  ToggleBtn.svelte  TopBar.svelte
src/components/btn/: AiCancelButton.svelte  AiSaveButton.svelte  ButtonCheck.svelte  ButtonClear.svelte  ButtonFmt.svelte  ButtonGear.svelte  ButtonRestart.svelte  ButtonRunnerStart.svelte  ButtonRunnerStop.svelte  ButtonRust.svelte  ButtonToggleSlider.svelte  ButtonTs.svelte  CancelButton.svelte  PreviewButton.svelte  SaveButton.svelte  SearchButton.svelte  SplitViewToggle.svelte  ToggleButton.svelte
src/components/common/types/: _functions.js
src/pages/: 404.svelte  _fallback.svelte  _folder.svelte  _layout.svelte  index.svelte
src/shims/: empty.js
src/stores/: notificationStore.js
src/template/: index.html
src/template/css/: main.css  output.css
