[package]
name = "editor-web-daemon"
version = "0.5.0"
edition = "2021"

[dependencies]
notify = "6"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.8"
lsp-bridge = { path = "../lsp-bridge" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
tar = "0.4"
bytes = "1"
tokio-util = { version = "0.7", features = ["compat"] }